# mb-applet-light

./: Makefile.am  configure.ac  light-applet.c  mb-applet-light.desktop
